Fix button overlapping

--- a/styles.css
+++ b/styles.css
@@ -72,7 +72,7 @@ h4 {
 	margin: 40px;
 	text-shadow: 0px 1px 0px rgba(63,107,169, 0.5);
 	padding-bottom: 40px;
-	border: solid;
+	/*border: solid;*/
 }
 
 .content p {
@@ -97,7 +97,7 @@ h4 {
 .logo { 
 	width:120px;
 	height:54px;
-	margin: 20px 0;
+	margin: 10px 0;
 	background-image:url(images/logo_ent_dados_asset_10_3x_1.png);
 	background-repeat:no-repeat;
 	background-size:120px;
@@ -110,9 +110,9 @@ h4 {
 	border-radius: 120px;
 	border: solid 4px white;
 	display: block;
-	padding: 20px 40px;
-	max-width: 300px;
-	margin: 80px auto 0px;
+	padding: 10px 40px;
+	max-width: 270px;
+	margin: 40px auto 0px;
 }
 
 .hero {
@@ -123,6 +123,10 @@ h4 {
   	/*transform: translateX(-40px);*/
   	width: 100%;
   	/*border: solid;*/
+}
+
+.hero h4 {
+	margin-top: 40px;
 }
 
 .ghost {
